Refs #140518 - Fix cards width on small screen.

--- a/src/SearchBlock/styles.less
+++ b/src/SearchBlock/styles.less
@@ -768,8 +768,6 @@ div#page-document {
       clear: both;
 
       div.card-item {
-        max-width: 230px;
-
         border-radius: 0px;
 
         div.header {
@@ -1230,6 +1228,14 @@ div.ui.modal.facet {
         margin-bottom: 3px;
         margin-left: 0px;
       }
+    }
+  }
+}
+
+@media only screen and (min-width: 770px) {
+  div.cards {
+    div.card-item {
+      min-width: 230px;
     }
   }
 }
